--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 <i class="fas fa-times modal-close-btn"></i>
                                 <h3>מטרות ויעדים </h3>
                                 <h4>מה זה?</h4>
-                                <p>נלמד ביחד איתי איך להציב יעדים פיננסיים בצורה הטובה ביותר והיעילה ביותר כך שנוכל להתמיד בה לאורך זמן.
+                                <p>בפגישה זו תלמדו איך להציב יעדים פיננסיים בצורה הטובה והיעילה ביותר כך שתוכלו להתמיד בה לאורך זמן.
                                 </p>
                                 <!-- <h4>מה אני מציע לכם?</h4>
                                 <ul>
