--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     <p>אני תמיד פתוח להצעות<br><span> ומוכן לעזור לכם בכל דבר שתצטרכו.
                         </span>
                     </p>
-                    <form action="https://formsubmit.co/meir.financial@gmail.com " method="post" class="contact-form">
+                    <form action="https://formsubmit.co/meir.financial@gmail.com" method="post" class="contact-form">
                         <div class="first-row">
                             <input type="text" placeholder="שם מלא" required>
                         </div>
@@ -364,6 +364,10 @@
                         <div class="second-row">
                             <input type="email" placeholder="אימייל" required>
                             <input type="text" placeholder="נושא">
+                        </div>
+
+                        <div class="first-row">
+                            <input type="tel" placeholder="מס' טלפון" required>
                         </div>
 
                         <div class="third-row">
