--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h2 class="section-title-02">מי אני?</h2>
             <div class="content flex-center">
                 <div class="about-img">
-                    <img src="images/22.jpg" alt="">
+                    <img src="images/23.jpg" alt="">
                 </div>
                 <!-- <div class="about-info">
                     <div class="description">
@@ -118,7 +118,7 @@
                 <div class="about-info">
                     <li class="service-container service-about">
                         <div class="service-cards">
-                            <h2 >נעים מאוד, מאיר דהאן, 26, קרית אתא</h2>
+                            <h2 >נעים מאוד, מאיר דהאן 26 קרית אתא.</h2>
                             <div class="learn-more-btn" style="cursor: pointer;">להמשך קריאה <i class="fas fa-long-arrow-alt-left"></i></div>
                         </div>
                         <div class="service-modal flex-center service-modal-about">
@@ -365,7 +365,7 @@
                         
                         <div class="second-row">
                             <input type="email" placeholder="אימייל" name="Email" required>
-                            <input type="text" placeholder="נושא" name="Subjuct">
+                            <input type="text" placeholder="נושא" name="Subjuct" required>
                         </div>
 
                         <div class="first-row">
