--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="about-info">
                     <li class="service-container service-about">
                         <div class="service-cards">
-                            <h2 >נעים מאוד, מאיר דהאן 26 קרית אתא.</h2>
+                            <h2 >נעים מאוד, מאיר דהאן קרית אתא.</h2>
                             <div class="learn-more-btn" style="cursor: pointer;">להמשך קריאה <i class="fas fa-long-arrow-alt-left"></i></div>
                         </div>
                         <div class="service-modal flex-center service-modal-about">
